--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,10 +13,10 @@ include_directories(${ROOTDIR}/include)
 # set the compilation options
 add_definitions(-Wfatal-errors -std=c++0x -DZOOST_EXPORTS)
 
-# add an option for choosing the build type (shared or static)
+# add an option to choose the build type (shared or static)
 set(BUILD_SHARED_LIBS TRUE CACHE BOOL "TRUE to build SFML as shared libraries, FALSE to build it as static libraries")
 
-# add an option for building the API documentation
+# add an option to build or not the API documentation
 set(BUILD_DOC FALSE CACHE BOOL "TRUE to generate the API documentation, FALSE to ignore it")
 
 # add the source files
